Fix: Update alignment property in brand-container and adjust border color in subscriptionModal

--- a/lightup/styles/styles.css
+++ b/lightup/styles/styles.css
@@ -43,7 +43,7 @@ header {
 
 .brand-container a {
     max-width: 150px;
-    align-items: left;
+    align-items: flex-start;
     padding: 0;
 }
 
@@ -370,12 +370,7 @@ footer>p {
     float: right;
     outline: none;
     background-color: transparent;
-    border: none;
-
-}
-
-#subscriptionModal #closeModal {
-    border: 1px solid var(--background-color);
+    border: 1px solid var(--secondary-color);
 }
 
 /* #subscriptionModal {} */
